update lewis' bio and abstract

--- a/keynote.html
+++ b/keynote.html
@@ -274,10 +274,30 @@
 								</strong></h5>
 								Dr. W. Lewis Johnson co-founded Alelo in 2005 as a spinout of the University of Southern
 								California, under his leadership Alelo has developed into a major producer of innovative
-								learning products focusing on communication skills. Alelo has developed courses for use
-								in a number of countries around the world, all using the Virtual Role-Play method.
-								<div class="separator small"></div>
-
+								learning solutions. Alelo’s AI-powered pedagogical agents to help people rapidly learn
+								new skills. Alelo has developed learning products for use in a number of countries
+								around the world, with over 500,000 learners to date. Dr. Johnson is a co-winner of the
+								DARPATech Technical Achievement Award, the IFAAMAS Influential Paper Award, and the
+								XPRIZE Rapid Resklilling Competition. He speaks Chinese, Russian, and other languages of
+								the East Asian region.
+								<div class="separator"></div>
+								<h5><strong>Abstract</strong></h5>
+								<h6 class="morespace" style="text-align: justify;">
+									Generative AI is powering a new generation of pedagogical agents that are highly
+									effective and can transform how people learn. Pedagogical agents are now more
+									adaptive and personalized than has ever been possible before. They give learners
+									opportunities to practice new skills in a safe environment, resulting in rapid
+									learning gains and improved retention.<br/>
+									Generative AI is also transforming the workforce, and this poses challenges for
+									training, education, and society at large. As organizations adopt generative AI,
+									jobs are being transformed and entry-level positions are being eliminated.
+									Pedagogical agents can help people quickly develop the skills that they will need to
+									succeed in the workforce of the future, including people skills, critical thinking,
+									and responsible use of AI.<br/>
+									This talk will discuss current trends in generative AI and pedagogical agents and
+									also look toward the future, as generative AI expands its capabilities and is
+									integrated into education and training.
+								</h6>
 								<div class="separator"></div>
 								<a id="3" name="3"></a>
 								<div class="separator line"></div>
@@ -310,19 +330,42 @@
 										</strong></h3>
 									<div class="separator small"></div>
 									<h5 class="one_third"><strong>Yu-Ju Lan </strong></h5>
-									<p class="two_third lastcols">Research Chair Professor<br>National Taiwan Normal University
+									<p class="two_third lastcols">Research Chair Professor<br>National Taiwan Normal
+										University
 									</p>
 									<h6 class="morespace" style="text-align: justify;"><strong><span
 												class="tab-content"><img src="image/org/YU-JU LAN.png" alt=""
 													class="alignleft frame" width="188" /></span><br>&nbsp;<br>
 											<h5>Speaker Bio
 										</strong></h5>
-										Dr. Yu-Ju Lan is a Research Chair Professor in the Department of Chinese as a Second Language at National Taiwan Normal University. She is currently the Editor-in-Chief of Educational Technology & Society, Associate Editor of Language Learning & Technology, and on the editorial board of Ampersand. She was awarded the Outstanding Research Award by the Ministry of Science and Technology (MOST), Taiwan, in 2022. Dr. Lan is the founding president of the Taiwan Pedagogy and Practice in TELL Association. Her research interests include technology-enhanced foreign language learning, virtual reality, AI, and online synchronous teacher training. 
+										Dr. Yu-Ju Lan is a Research Chair Professor in the Department of Chinese as a
+										Second Language at National Taiwan Normal University. She is currently the
+										Editor-in-Chief of Educational Technology & Society, Associate Editor of
+										Language Learning & Technology, and on the editorial board of Ampersand. She was
+										awarded the Outstanding Research Award by the Ministry of Science and Technology
+										(MOST), Taiwan, in 2022. Dr. Lan is the founding president of the Taiwan
+										Pedagogy and Practice in TELL Association. Her research interests include
+										technology-enhanced foreign language learning, virtual reality, AI, and online
+										synchronous teacher training.
 										Association.
 										<div class="separator"></div>
 										<h5><strong>Abstract</strong></h5>
 										<h6 class="morespace" style="text-align: justify;">
-											Artificial intelligence (AI) has long been playing an essential role in language education. However, the recent emergence of generative AI models like ChatGPT and Midjourney has reignited interest in the potential of AI applications in education, prompting both excitement and caution. Generative AI holds considerable promise for revolutionizing education across various fronts. With the advent of the Metaverse era, hailed as a transformative phase in internet evolution, there's an urgent need for educators and researchers to reassess the relationship between humans and AI as we reshape our teaching, learning, and everyday experiences. As educators, it's imperative that we engage in open conversations about integrating the Metaverse and AI into language learning, topics that are currently at the forefront of academic discourse. In light of this, the speech will cover several key areas, including an introduction to the Metaverse and generative AI, their practical application in language learning, the opportunities they present, the challenges they pose, and recommendations for future research.
+											Artificial intelligence (AI) has long been playing an essential role in
+											language education. However, the recent emergence of generative AI models
+											like ChatGPT and Midjourney has reignited interest in the potential of AI
+											applications in education, prompting both excitement and caution. Generative
+											AI holds considerable promise for revolutionizing education across various
+											fronts. With the advent of the Metaverse era, hailed as a transformative
+											phase in internet evolution, there's an urgent need for educators and
+											researchers to reassess the relationship between humans and AI as we reshape
+											our teaching, learning, and everyday experiences. As educators, it's
+											imperative that we engage in open conversations about integrating the
+											Metaverse and AI into language learning, topics that are currently at the
+											forefront of academic discourse. In light of this, the speech will cover
+											several key areas, including an introduction to the Metaverse and generative
+											AI, their practical application in language learning, the opportunities they
+											present, the challenges they pose, and recommendations for future research.
 										</h6>
 										<div class="separator"></div>
 
