update registration page

--- a/reg.html
+++ b/reg.html
@@ -72,10 +72,10 @@
 						</li>
 						<li><a href="call-for-paper.html">CALL FOR Papers</a>
 							<ul>
-							  <li><a href="mainConference.html">Main conference</a> </li>
-							  <li><a href="teacherForum.html">Teacher Forum</a> </li>
+								<li><a href="mainConference.html">Main conference</a> </li>
+								<li><a href="teacherForum.html">Teacher Forum</a> </li>
 							</ul>
-						  </li>
+						</li>
 						<li><a href="agenda.html">Programme</a>
 							<ul>
 								<li><a href="keynote.html">keynote</a> </li>
@@ -117,9 +117,13 @@
 
 
 						<div>
-							<!-- <a href="https://lttc-database.eduhk.hk/metaaces2023/checkout_form.php" target="_blank"><button type="button" style="color: #ffffff; background-color: #0b0eb8;font-size: 14px;">Register Now</button></a> -->
+							<a href="https://forms.gle/oDhH1Hywktdys52K7" target="_blank"><button type="button"
+									style="color: #ffffff; background-color: #0b0eb8;font-size: 14px;">Register
+									Now</button></a>
 						</div>
-
+						<div class="separator small"></div>
+						<div class="separator small"></div>
+						<a id="1" name="1"></a>
 						<h3><strong>Registration Fees</strong></h3>
 						<!-- <img src="image/Simple Notice Under Construction.png" width="100%" alt=""/> -->
 						<div class="separator small"></div>
@@ -143,7 +147,8 @@
 										<td width="33%">USD$ 375 (NTD$ 11,940)</td>
 									</tr>
 									<tr>
-										<td width="47%" style="text-align: left;">APSCE student or K-12 APSCE teacher member</td>
+										<td width="47%" style="text-align: left;">APSCE student or K-12 APSCE teacher
+											member</td>
 										<td width="33%">USD$ 135 (NTD$ 4,300)</td>
 									</tr>
 									<tr>
@@ -156,7 +161,8 @@
 										<td width="33%">USD$ 485 (NTD$ 15,440)</td>
 									</tr>
 									<tr>
-										<td width="47%" style="text-align: left;">Student or K-12 teacher non-member</td>
+										<td width="47%" style="text-align: left;">Student or K-12 teacher non-member
+										</td>
 										<td width="33%">USD$ 245 (NTD$ 7,800)</td>
 									<tr>
 										<th>Teacher Forum</th>
@@ -171,6 +177,91 @@
 								</tbody>
 							</table>
 						</h6>
+						<h2 class="title_pattern"><strong><span>Conference Registration Process
+									Guidelines</span></strong></h2>
+						<h3><strong>Online Registration</strong></h3>
+						<h4><strong>1. Complete the Online Registration Form:</strong></h4>
+						<ol>
+							<h5>Fill out the online registration form with all necessary information. <br /><a
+									href="https://forms.gle/oDhH1Hywktdys52K7" target="_blank">Registration Form</a>
+							</h5>
+						</ol>
+						<h4><strong>2. Select Preferred Payment Method and Pay Registration Fee:</strong></h4>
+						<ol>
+							<h5>Choose the preferred payment method【bank transfer, paypal (PayPal Limited to
+								International Regions)】</h5>
+							<h5 style="color: #B22222; font-weight: bold;">Taiwan registrant please use Remittances
+								(Taiwan Only). See details below.</h5>
+							<div>
+								<a href="https://forms.gle/oDhH1Hywktdys52K7" target="_blank"><button type="button"
+										style="color: #ffffff; background-color: #0b0eb8;font-size: 14px;">Pay
+										Registration Fee</button></a>
+							</div>
+						</ol>
+
+						<h4><strong>Remittances (for Taiwan registrant)</strong></h4>
+						<table width="90%" cellspacing="10" cellpadding="5">
+							<tbody>
+								<tr>
+									<td width="180" style="text-align:left;"><strong>帳戶名稱：</strong></td>
+									<td>臺南市數位科技發展學會曾怡甄</td>
+								</tr>
+								<tr>
+									<td style="text-align:left;"><strong>銀行名稱：</strong>
+									</td>
+									<td>玉山銀行 東台南分行
+									</td>
+								</tr>
+								<tr>
+									<td style="text-align:left;"><strong>銀行代碼：</strong>
+									</td>
+									<td>808</td>
+								</tr>
+								<tr>
+									<td style="text-align:left;"><strong>帳戶號碼</strong></td>
+									<td><strong>0761-940-033967</strong></td>
+								</tr>
+								<tr>
+									<td style="text-align:left;"><strong>Swift Code:</strong></td>
+									<td><strong>BEASHKHH</strong></td>
+								</tr>
+								<tr>
+									<td style="text-align:left;"><strong>Remittance Information:</strong>
+									</td>
+									<td><strong>[Paper ID] - MetaACES2023-09852</strong></td>
+								</tr>
+								<tr>
+									<td colspan="2" style="text-align:left;"><strong>NOTES:</strong>
+
+										<br>*繳款後請將匯款證明寄至MetaACES2024@gmail.com</strong><br>
+
+										<!-- &nbsp;
+
+										<br>-  All bank charges for remittances are to be borne by the
+										participant. Failure to pay this fee will result in an incomplete
+										registration.<br>
+
+										&nbsp;
+
+										<br>-  After remittance, please complete the <a
+											href="https://eduhk.au1.qualtrics.com/jfe/form/SV_1ZZRMYDvmxOAQLA"
+											target="_blank">online registration form (T/T payment)</a> and
+										upload the T/T receipt to the form. -->
+									</td>
+								</tr>
+							</tbody>
+						</table>
+
+						<h3><strong>Confirmation:</strong></h3>
+						<h4><strong>1. Confirmation Email:</strong></h4>
+						<ol>
+							<h5>Upon successful payment, participants will receive a confirmation email.</h5>
+						</ol>
+						<h4><strong>2. Details in Confirmation Email:</strong></h4>
+						<ol>
+							<h5>The confirmation email will contain information regarding registration, payment, and
+								important event details.</h5>
+						</ol>
 
 						<!-- <h5 class="morespace">* One-year APSCE membership fee (1 June 2023 to 31 May 2024) is included
 							in MetaACES 2024 registration fee.</h5>
@@ -273,7 +364,7 @@
 								removal from the final published and indexed proceedings) if the paper is not presented
 								by an author during the event."</h4>  -->
 
-							<!--h3 class="morespace"><strong><span>Emerging Economies</span></strong></h3>
+						<!--h3 class="morespace"><strong><span>Emerging Economies</span></strong></h3>
                        <h4 class="morespace">Individuals from these emerging economies as defined by World Bank are qualified for a discounted rate.</h4>
                        <h4 class="morespace">LOW-INCOME ECONOMIES</h4>
                        <h4 class="morespace">LOWER-MIDDLE INCOME ECONOMIES</h4>
@@ -293,7 +384,7 @@
 									<strong>
 										<li><span class="colortext">Paper submission due</span><br />
 											<span class="date"><span><s>February 4, 2024</s></span>
-											<span style="color: #0766AD;"><strong>March 17, 2024</strong></span>
+												<span style="color: #0766AD;"><strong>March 17, 2024</strong></span>
 												<span class="clear"></span>
 										</li>
 										<li><span class="colortext">Review notification date</span><br />
