--- a/reg.html
+++ b/reg.html
@@ -50,6 +50,66 @@
 
 			});
 		</script>
+		<style>
+			.registration-form-container {
+				width: 100%;
+				display: flex;
+				justify-content: center;
+			}
+
+			form {
+				background-color: #fff;
+				padding: 20px;
+				border-radius: 8px;
+				box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+				width: 300px;
+				margin: 20px auto;
+			}
+
+			body {
+				font-family: Arial, sans-serif;
+				background-color: #f4f4f4;
+				margin: 0;
+				padding: 20px;
+				display: flex;
+				justify-content: center;
+			}
+
+			form {
+				background-color: #fff;
+				padding: 20px;
+				border-radius: 8px;
+				box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+				width: 300px;
+			}
+
+			h2 {
+				text-align: center;
+			}
+
+			label {
+				margin-top: 10px;
+				display: block;
+				font-weight: bold;
+			}
+
+			select,
+			input[type="text"] {
+				width: 100%;
+				padding: 8px;
+				margin-top: 5px;
+				border-radius: 4px;
+				border: 1px solid #ddd;
+				box-sizing: border-box;
+			}
+
+			input[type="image"] {
+				display: block;
+				margin: 20px auto;
+				width: 50%;
+				height: auto;
+			}
+		</style>
 	</head>
 
 <body>
@@ -192,10 +252,34 @@
 								International Regions)】</h5>
 							<h5 style="color: #B22222; font-weight: bold;">Taiwan registrant please use Remittances
 								(Taiwan Only). See details below.</h5>
-							<div>
-								<a href="https://forms.gle/oDhH1Hywktdys52K7" target="_blank"><button type="button"
-										style="color: #ffffff; background-color: #0b0eb8;font-size: 14px;">Pay
-										Registration Fee</button></a>
+							<div class="registration-form-container">
+								<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+									<h2>Register Now</h2>
+									<input type="hidden" name="cmd" value="_s-xclick">
+									<input type="hidden" name="hosted_button_id" value="72BJ7SRTY7HY8">
+									<input type="hidden" name="currency_code" value="USD">
+
+									<label for="registrationFees">Registration Fees</label>
+									<select name="os0" id="registrationFees">
+										<option value="Please select an option">Please select an option</option>
+										<option value="APSCE Member: USD$ 375">APSCE Member: USD$ 375</option>
+										<option value="APSCE student or K-12 APSCE teacher member: USD$ 135">APSCE
+											student or K-12 APSCE teacher member: USD$ 135</option>
+										<option value="Non-APSCE member: USD$ 485">Non-APSCE member: USD$ 485</option>
+										<option value="Student or K-12 teacher non-member: USD$ 245">Student or K-12
+											teacher non-member: USD$ 245</option>
+										<option value="Teacher Forum K-12 teacher: USD$ 90">Teacher Forum K-12 teacher:
+											USD$ 90</option>
+									</select>
+
+									<label for="registerEmail">Register Email</label>
+									<input type="text" name="os1" id="registerEmail" maxLength="200">
+
+									<input type="image"
+										src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif"
+										name="submit" title="PayPal - The safer, easier way to pay online!"
+										alt="Buy Now">
+								</form>
 							</div>
 						</ol>
 
@@ -220,11 +304,6 @@
 								<tr>
 									<td style="text-align:left;"><strong>帳戶號碼</strong></td>
 									<td><strong>0761-940-033967</strong></td>
-								</tr>
-								<tr>
-									<td style="text-align:left;"><strong>Remittance Information:</strong>
-									</td>
-									<td><strong>[Paper ID] - MetaACES2023-09852</strong></td>
 								</tr>
 								<tr>
 									<td colspan="2" style="text-align:left;"><strong>NOTES:</strong>
