update registeration page from 1. to step1.

--- a/reg.html
+++ b/reg.html
@@ -240,13 +240,13 @@
 						<h2 class="title_pattern"><strong><span>Conference Registration Process
 									Guidelines</span></strong></h2>
 						<h3><strong>Online Registration</strong></h3>
-						<h4><strong>1. Complete the Online Registration Form:</strong></h4>
+						<h4><strong>Step 1. Complete the Online Registration Form:</strong></h4>
 						<ol>
 							<h5>Fill out the online registration form with all necessary information. <br /><a
 									href="https://forms.gle/oDhH1Hywktdys52K7" target="_blank">Registration Form</a>
 							</h5>
 						</ol>
-						<h4><strong>2. Select Preferred Payment Method and Pay Registration Fee:</strong></h4>
+						<h4><strong>Step 2. Select Preferred Payment Method and Pay Registration Fee:</strong></h4>
 						<ol>
 							<h5>Choose the preferred payment method【bank transfer, paypal (PayPal Limited to
 								International Regions)】</h5>
