--- a/reg.html
+++ b/reg.html
@@ -327,7 +327,7 @@
 							</tbody>
 						</table>
 
-						<h3><strong>Confirmation:</strong></h3>
+						<h3><strong>Step 3. Confirmation:</strong></h3>
 						<h4><strong>1. Confirmation Email:</strong></h4>
 						<ol>
 							<h5>Upon successful payment, participants will receive a confirmation email.</h5>
