--- a/call-for-paper.html
+++ b/call-for-paper.html
@@ -250,14 +250,14 @@
                 <h4 class="morespace"><strong>Full paper (6 pages, including the title, abstract (maximum 250 words),
                     and keywords):</strong> for research that has evaluation with
                   data collection, analysis, findings and discussion</h4>
-                <h4 class="morespace"><strong>Short papers (4 pages, 6 pages, including the title, abstract (maximum 250
+                <h4 class="morespace"><strong>Short papers (4 pages, including the title, abstract (maximum 250
                     words), and keywords):</strong> for research about systematic
                   literature review, meta-analysis, design and implementation, application/tool/AR/VR/game, survey and
                   its results, etc.</h4>
                 <!-- <h4 class="morespace"><strong>Extended Summary (2 to 3 pages):</strong> for authors who have complete
                   research but want to submit the details to journals to talk about main ideas, deliverables, and key
                   results</h4> -->
-                <h4 class="morespace"><strong>Extended Abstract (2 pages, including the title and keywords):
+                <h4 class="morespace"><strong>Extended Abstract/POSTER (2 pages, including the title and keywords):
                   </strong>for research in its early stage,
                   talking about conceptual ideas, thoughts and concerns for discussions, challenges/difficulties,
                   framework, concepts, plan, etc.</h4>
