--- a/reg.html
+++ b/reg.html
@@ -174,13 +174,6 @@
 			<div id="content" class="withsidebar">
 				<div id="main">
 					<div id="maincontent">
-
-
-						<div>
-							<a href="https://forms.gle/oDhH1Hywktdys52K7" target="_blank"><button type="button"
-									style="color: #ffffff; background-color: #0b0eb8;font-size: 14px;">Register
-									Now</button></a>
-						</div>
 						<div class="separator small"></div>
 						<div class="separator small"></div>
 						<a id="1" name="1"></a>
@@ -240,18 +233,15 @@
 						<h2 class="title_pattern"><strong><span>Conference Registration Process
 									Guidelines</span></strong></h2>
 						<h3><strong>Online Registration</strong></h3>
-						<h4><strong>Step 1. Complete the Online Registration Form:</strong></h4>
-						<ol>
-							<h5>Fill out the online registration form with all necessary information. <br /><a
-									href="https://forms.gle/oDhH1Hywktdys52K7" target="_blank">Registration Form</a>
-							</h5>
-						</ol>
-						<h4><strong>Step 2. Select Preferred Payment Method and Pay Registration Fee:</strong></h4>
-						<ol>
-							<h5>Choose the preferred payment method【bank transfer, paypal (PayPal Limited to
-								International Regions)】</h5>
-							<h5 style="color: #B22222; font-weight: bold;">Taiwan registrant please use Remittances
-								(Taiwan Only). See details below.</h5>
+						<h4><strong>Step 1. Select Preferred Payment Method and Pay Registration Fee:</strong></h4>
+						<ul>
+							<h6
+								style="color: #B22222; font-weight: bold; background-color: #F8F8F8; padding: 10px; border-left: 5px solid #FFD700;">
+								Taiwan registrant please use Remittances (Taiwan Only).
+							</h6>
+							<li>
+								<h4><strong>Paypal (For international registrant)</strong></h4>
+							</li>
 							<div class="registration-form-container">
 								<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 									<h2>Register Now</h2>
@@ -281,62 +271,70 @@
 										alt="Buy Now">
 								</form>
 							</div>
-						</ol>
+						</ul>
+						<ul>
+							<li>
+								<h4><strong>Remittances (For Taiwan registrant)</strong></h4>
+							</li>
+							<table width="90%" cellspacing="10" cellpadding="5">
+								<tbody>
+									<tr>
+										<td width="180" style="text-align:left;"><strong>帳戶名稱：</strong></td>
+										<td>臺南市數位科技發展學會曾怡甄</td>
+									</tr>
+									<tr>
+										<td style="text-align:left;"><strong>銀行名稱：</strong>
+										</td>
+										<td>玉山銀行 東台南分行
+										</td>
+									</tr>
+									<tr>
+										<td style="text-align:left;"><strong>銀行代碼：</strong>
+										</td>
+										<td>808</td>
+									</tr>
+									<tr>
+										<td style="text-align:left;"><strong>帳戶號碼</strong></td>
+										<td><strong>0761-940-033967</strong></td>
+									</tr>
 
-						<h4><strong>Remittances (for Taiwan registrant)</strong></h4>
-						<table width="90%" cellspacing="10" cellpadding="5">
-							<tbody>
-								<tr>
-									<td width="180" style="text-align:left;"><strong>帳戶名稱：</strong></td>
-									<td>臺南市數位科技發展學會曾怡甄</td>
-								</tr>
-								<tr>
-									<td style="text-align:left;"><strong>銀行名稱：</strong>
-									</td>
-									<td>玉山銀行 東台南分行
-									</td>
-								</tr>
-								<tr>
-									<td style="text-align:left;"><strong>銀行代碼：</strong>
-									</td>
-									<td>808</td>
-								</tr>
-								<tr>
-									<td style="text-align:left;"><strong>帳戶號碼</strong></td>
-									<td><strong>0761-940-033967</strong></td>
-								</tr>
-								<tr>
-									<td colspan="2" style="text-align:left;"><strong>NOTES:</strong>
-
-										<br>*繳款後請將匯款證明寄至MetaACES2024@gmail.com</strong><br>
-
-										<!-- &nbsp;
-
-										<br>-  All bank charges for remittances are to be borne by the
-										participant. Failure to pay this fee will result in an incomplete
-										registration.<br>
-
-										&nbsp;
-
-										<br>-  After remittance, please complete the <a
-											href="https://eduhk.au1.qualtrics.com/jfe/form/SV_1ZZRMYDvmxOAQLA"
-											target="_blank">online registration form (T/T payment)</a> and
-										upload the T/T receipt to the form. -->
-									</td>
-								</tr>
-							</tbody>
-						</table>
-
-						<h3><strong>Step 3. Confirmation:</strong></h3>
-						<h4><strong>1. Confirmation Email:</strong></h4>
+								</tbody>
+							</table>
+						</ul>
+						<h4><strong>Step 2. Complete the Online Registration Form:</strong></h4>
 						<ol>
-							<h5>Upon successful payment, participants will receive a confirmation email.</h5>
+							<h5>Fill out the online registration form with all necessary information.
+							</h5>
+							<div>
+								<a href="https://forms.gle/oDhH1Hywktdys52K7" target="_blank"><button type="button"
+										style="color: #ffffff; background-color: #0b0eb8;font-size: 14px;">Register
+										Now</button></a>
+							</div>
 						</ol>
-						<h4><strong>2. Details in Confirmation Email:</strong></h4>
+						<h4><strong>Step 3. Confirmation:</strong></h4>
+						<ul>
+							<li>
+								<h5><strong>Confirmation Email:</strong></h5>
+							</li>
+						</ul>
 						<ol>
-							<h5>The confirmation email will contain information regarding registration, payment, and
-								important event details.</h5>
+							<h5>Upon successful register, participants will rreceive a copy of the completed Google
+								Form.</h5>
 						</ol>
+						<h3><strong>Note</strong></h3>
+						<ul>
+							<li>
+								<h4 class="morespace"><strong>paper must have a registered author.</strong></h4>
+							</li>
+							<li>
+								<h4 class="morespace"><strong>Each registration can cover a maximum of two papers.</strong></h4>
+							</li>
+							<li>
+								<h4 class="morespace"><strong>There is no restriction on participants; only registered individuals will have access to conference services.</strong></h4>
+							</li>
+						</ul>
+
+
 
 						<!-- <h5 class="morespace">* One-year APSCE membership fee (1 June 2023 to 31 May 2024) is included
 							in MetaACES 2024 registration fee.</h5>
