--- a/reg.html
+++ b/reg.html
@@ -324,7 +324,7 @@
 						<h3><strong>Note</strong></h3>
 						<ul>
 							<li>
-								<h4 class="morespace"><strong>paper must have a registered author.</strong></h4>
+								<h4 class="morespace"><strong>Paper must have a registered author.</strong></h4>
 							</li>
 							<li>
 								<h4 class="morespace"><strong>Each registration can cover a maximum of two papers.</strong></h4>
