update some note for payment

--- a/reg.html
+++ b/reg.html
@@ -236,7 +236,7 @@
 						<h4><strong>Step 1. Select Preferred Payment Method and Pay Registration Fee:</strong></h4>
 						<ul>
 							<h6
-								style="color: #B22222; font-weight: bold; background-color: #F8F8F8; padding: 10px; border-left: 5px solid #FFD700;">
+								style="color: #4169E1; font-weight: bold; background-color: #F8F8F8; padding: 10px; border-left: 5px solid #FFD700;">
 								Taiwan registrant please use Remittances (Taiwan Only).
 							</h6>
 							<li>
@@ -262,7 +262,7 @@
 											USD$ 90</option>
 									</select>
 
-									<label for="registerEmail">Register Email</label>
+									<label for="registerEmail">Register Email (The email provided here will be used in the subsequent registration form.)</label>
 									<input type="text" name="os1" id="registerEmail" maxLength="200">
 
 									<input type="image"
@@ -300,6 +300,10 @@
 
 								</tbody>
 							</table>
+							<h6
+								style="color: #4169E1; font-weight: bold; background-color: #F8F8F8; padding: 10px; border-left: 5px solid #FFD700;">
+								Please refer to the table above for detailed payment amount and retain any proof of payment for use in the subsequent registration form.
+							</h6>
 						</ul>
 						<h4><strong>Step 2. Complete the Online Registration Form:</strong></h4>
 						<ol>
@@ -327,10 +331,12 @@
 								<h4 class="morespace"><strong>Paper must have a registered author.</strong></h4>
 							</li>
 							<li>
-								<h4 class="morespace"><strong>Each registration can cover a maximum of two papers.</strong></h4>
+								<h4 class="morespace"><strong>Each registration can cover a maximum of two
+										papers.</strong></h4>
 							</li>
 							<li>
-								<h4 class="morespace"><strong>There is no restriction on participants; only registered individuals will have access to conference services.</strong></h4>
+								<h4 class="morespace"><strong>There is no restriction on participants; only registered
+										individuals will have access to conference services.</strong></h4>
 							</li>
 						</ul>
 
