--- a/keynote.html
+++ b/keynote.html
@@ -287,13 +287,13 @@
 									effective and can transform how people learn. Pedagogical agents are now more
 									adaptive and personalized than has ever been possible before. They give learners
 									opportunities to practice new skills in a safe environment, resulting in rapid
-									learning gains and improved retention.<br/>
+									learning gains and improved retention.<br />
 									Generative AI is also transforming the workforce, and this poses challenges for
 									training, education, and society at large. As organizations adopt generative AI,
 									jobs are being transformed and entry-level positions are being eliminated.
 									Pedagogical agents can help people quickly develop the skills that they will need to
 									succeed in the workforce of the future, including people skills, critical thinking,
-									and responsible use of AI.<br/>
+									and responsible use of AI.<br />
 									This talk will discuss current trends in generative AI and pedagogical agents and
 									also look toward the future, as generative AI expands its capabilities and is
 									integrated into education and training.
@@ -314,12 +314,22 @@
 												class="alignleft frame" width="188" /></span><br>&nbsp;<br>
 										<h5>Speaker Bio
 									</strong></h5>
-									Dr. Maria Roussou is an Professor in Interactive Systems at the Department
-									of Informatics & Telecommunications, National and Kapodistrian University of Athens.
-									Her research interests span across various areas including Human-Computer
-									Interaction, eXtended Reality, Games, and Data Visualization.
+									Dr. Maria Roussou is an Associate Professor in Interactive Systems at the
+									University of Athens. Her career-long explorations of Virtual Reality and
+									Human-Computer Interaction have been positioned at the nexus of education and
+									culture, specializing in designing, developing, and evaluating digital environments
+									and XR experiences for formal and informal education. She holds a PhD in
+									Computer Science from the University of London (UCL); a Master in Fine Arts in
+									Electronic Visualization and an MSc in Electrical Engineering &amp; Computer
+									Science from the University of Illinois at Chicago; and a BSc in Applied
+									Informatics from the Athens University of Economics and Business. She is the
+									recipient of the 2013 Tartessos Award in Digital Heritage and Virtual
+									Archaeology.
 									<div class="separator small"></div>
-
+									<h5><strong>Abstract</strong></h5>
+									<h6 class="morespace" style="text-align: justify;">
+										The integration of immersive experiences into learning has reached a pivotal stage, coinciding with the emergence, accompanied by heightened expectations, of the metaverse and its promise to revolutionize social dynamics. Cultural institutions are actively exploring the metaverse&#39;s potential to enrich visitor engagement. In this keynote, I draw from case studies of extended reality applications, emphasizing their role as exploratory tools to foster reflexivity, sociality, hybridity, and historical empathy across diverse cultural landscapes. My aim is to address the complexities encountered during design and implementation, particularly focusing on aspects that may undermine the authenticity of social and cultural nuances within shared physical and virtual spaces. By examining both sophisticated XR applications and lower-end mobile applications, I showcase the evolution of immersive experiences evolving from didactic presentations to interactive, emotive, and socially engaging environments. Through leveraging interactive storytelling and participatory elements, immersive technologies in informal learning can facilitate deeper learning, reflective practices, and historical resonance while preserving the essence of human interaction.
+									</h6>
 									<div class="separator"></div>
 									<a id="4" name="4"></a>
 									<div class="separator line"></div>
