update guildline for presenter and track

--- a/workshop.html
+++ b/workshop.html
@@ -67,35 +67,41 @@
 				<!-- end #logo -->
 				<div id="nav">
 					<ul id="topnav" class="sf-menu">
-				   <li><a href="index.html">Home</a></li>
-				   <li><a href="about-us.html">About US</a>
-					 <ul>
-							 <li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
-							 <li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022 Nov</a> </li>
-							 <li><a href="https://www.eduhk.hk/metaaces2023/index.html">MetaACES 2023 Jun</a> </li>
-							</ul>
-						 </li>
-						 <li><a href="call-for-paper.html">CALL FOR Papers</a>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about-us.html">About US</a>
 							<ul>
-							  <li><a href="mainConference.html">Main conference</a> </li>
-							  <li><a href="teacherForum.html">Teacher Forum</a> </li>
+								<li><a href="https://www.eduhk.hk/metaaces2022/index.html">MetaACES 2022 Jun</a> </li>
+								<li><a href="https://www.eduhk.hk/metaaces2022NovICCE2022/index.html">MetaACES 2022
+										Nov</a> </li>
+								<li><a href="https://www.eduhk.hk/metaaces2023/index.html">MetaACES 2023 Jun</a> </li>
 							</ul>
-						  </li>
-				   <li><a href="agenda.html">Programme</a>
-					 <ul>
-							 <li><a href="keynote.html">keynote</a> </li>
-						   </ul>
-						 </li>
-				   <!--li><a href="keynote.html">Keynote Speech</a></li-->
-				   <li><a href="reg.html">Registration</a></li>
-				   <li><a href="location.html">Venue</a>
-					 <ul>
-					   <li><a href="accommodation.html">ACCOMMODATION</a> </li>
-					   <li><a href="https://www.ncu.edu.tw/en/pages/show.php?top=1&num=56" target="_blank" style="display: block;">TRANSPORTATION to NCU</a> </li>
-					   <li><a href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002107" target="_blank" style="display: block;" class="current">TRAVEL INFORMATION</a> </li>
-					 </ul>
-				   </li>
-				 </ul>
+						</li>
+						<li><a href="call-for-paper.html">CALL FOR Papers</a>
+							<ul>
+								<li><a href="mainConference.html">Main conference</a> </li>
+								<li><a href="teacherForum.html">Teacher Forum</a> </li>
+							</ul>
+						</li>
+						<li><a href="agenda.html">Programme</a>
+							<ul>
+								<li><a href="agenda.html">Proceedings (TBD)</a> </li>
+								<li><a href="keynote.html">keynote</a> </li>
+								<li><a href="presenterGuildline.html">Guidelines for presenters</a> </li>
+								<li><a href="chairGuildline.html">Guidelines for Track Chairs & Co-Chairs</a> </li>
+							</ul>
+						</li>
+						<!--li><a href="keynote.html">Keynote Speech</a></li-->
+						<li><a href="reg.html">Registration</a></li>
+						<li><a href="location.html">Venue</a>
+							<ul>
+								<li><a href="accommodation.html">ACCOMMODATION</a> </li>
+								<li><a href="https://www.ncu.edu.tw/en/pages/show.php?top=1&num=56" target="_blank"
+										style="display: block;">TRANSPORTATION to NCU</a> </li>
+								<li><a href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002107" target="_blank"
+										style="display: block;" class="current">TRAVEL INFORMATION</a> </li>
+							</ul>
+						</li>
+					</ul>
 					<!-- #topnav -->
 				</div>
 				<!-- #nav -->
@@ -151,7 +157,7 @@
 										<li><span class="colortext">Paper submission due</span><br />
 											<span class="date"><s>February 4, 2024</s></span>
 											<span style="color: #0766AD;"><strong>March 17, 2024</strong></span>
-												<span class="clear"></span>
+											<span class="clear"></span>
 										</li>
 										<li><span class="colortext">Review notification date</span><br />
 											<span class="date">April 28, 2024</span>
