--- a/presenterGuildline.html
+++ b/presenterGuildline.html
@@ -87,7 +87,7 @@ jQuery(document).ready(function(){
         <div id="header" class="innerpage">
         	<div class="shadow"></div>
         	<div class="container940">
-        		<h1 class="pagetitle">programme</h1>
+        		<h1 class="pagetitle">Guidelines for presenters</h1>
                 <div class="pagedesc">The 2nd International Conference on Metaverse and AI Companions in Education and Society</div>
                 <div class="clear"></div><!-- clear float -->
             </div><!-- end container940 -->
