--- a/teacherForum.html
+++ b/teacherForum.html
@@ -65,8 +65,11 @@
                         </li>
                         <li><a href="agenda.html">Programme</a>
                             <ul>
-                                <li><a href="keynote.html">keynote</a> </li>
-                            </ul>
+								<li><a href="agenda.html">Proceedings (TBD)</a> </li>
+								<li><a href="keynote.html">keynote</a> </li>
+								<li><a href="presenterGuildline.html">Guidelines for presenters</a> </li>
+								<li><a href="chairGuildline.html">Guidelines for Track Chairs & Co-Chairs</a> </li>
+							</ul>
                         </li>
                         <!--li><a href="keynote.html">Keynote Speech</a></li-->
                         <li><a href="reg.html">Registration</a></li>
