--- a/reg.html
+++ b/reg.html
@@ -305,6 +305,10 @@
 							</table>
 							<h6
 								style="color: #4169E1; font-weight: bold; background-color: #F8F8F8; padding: 10px; border-left: 5px solid #FFD700;">
+								Please include the paper number and your name in the transfer note.
+							</h6>
+							<h6
+								style="color: #4169E1; font-weight: bold; background-color: #F8F8F8; padding: 10px; border-left: 5px solid #FFD700;">
 								Please refer to the table above for detailed payment amount and retain any proof of payment for use in the subsequent registration form.
 							</h6>
 						</ul>
