--- a/presenterGuildline.html
+++ b/presenterGuildline.html
@@ -119,7 +119,7 @@
               <span style="color: #007BFF;">all short paper presentations will be 15 to 20 minutes long (including a 3-minute Q&A session).</span></p>
 
             <h2>Poster Sessions</h2>
-            <p class="enlarged-text">Poster sessions will be held on <span style="color: #007BFF;">Wednesday and Thursday afternoons.</span> Posters will be displayed for <span style="color: #007BFF;">90
+            <p class="enlarged-text">Poster sessions will be held on <span style="color: #007BFF;">Thursday afternoon.</span> Posters will be displayed for <span style="color: #007BFF;">100
               minutes.</span> Poster stands and mounting materials will be available in the poster area. Below, we provide
               essential instructions on formatting – particularly the need for PORTRAIT (vertical) orientation. We will
               need to have two posters side-by-side, so all posters will need to have a portrait orientation.</p>
