--- a/panel1.html
+++ b/panel1.html
@@ -92,7 +92,7 @@
       <div id="header" class="innerpage">
         <div class="shadow"></div>
         <div class="container940">
-          <h1 class="pagetitle">Guidelines for presenters</h1>
+          <h1 class="pagetitle">PANEL 1</h1>
           <div class="pagedesc">The 2nd International Conference on Metaverse and AI Companions in Education and Society
           </div>
           <div class="clear"></div><!-- clear float -->
@@ -105,44 +105,78 @@
           <div id="maincontent">
             <!-- <img src="image/Simple Notice Under Construction.png" width="100%" alt="" /> -->
             <!-- <a href="https://www.eduhk.hk/metaaces2023/download/MetaACES2023_Programme_20221027.pdf" target="_blank"><img src="image/metaaces2022_prog_summary.png" alt="METAACES2022 NOV 議程一覽" width="600"/></a><br><br> -->
-            <h1>Guidelines for Presenters</h1>
-            <h2>Session Formats</h2>
-            <p class="enlarged-text">We have several formats of presentations: long papers, short papers, and posters.
-              None of these sessions
-              will be live-streamed or recorded. Only keynotes, the welcome session, and the closing/awards ceremony
-              will be recorded.</p>
 
-            <h2>Long & Short Paper Sessions</h2>
-            <p class="enlarged-text">Long paper sessions will include five long paper presentations and a discussion
-              coordinated by a session
-              chair. Presenters should check in with their session chairs for specific instructions, if any, but all
-              <span style="color: #007BFF;">long paper presentations will be 20 to 25 minutes long (including a 5-minute
-                Q&A session).</span>
-            </p>
-            <p class="enlarged-text">Short paper sessions will include three short paper presentations and a discussion
-              coordinated by a
-              session chair. Presenters should check in with their session chairs for specific instructions, if any, but
-              <span style="color: #007BFF;">all short paper presentations will be 15 to 20 minutes long (including a
-                3-minute Q&A session).</span>
-            </p>
-
-            <h2>Poster Sessions</h2>
-            <p class="enlarged-text">Poster sessions will be held on <span style="color: #007BFF;">Thursday
-                afternoon.</span> Posters will be displayed for <span style="color: #007BFF;">100
-                minutes.</span> Poster stands and mounting materials will be available in the poster area. Below, we
-              provide
-              essential instructions on formatting – particularly the need for PORTRAIT (vertical) orientation. We will
-              need to have two posters side-by-side, so all posters will need to have a portrait orientation.</p>
-            <h3>Formatting and printing options</h3>
-            <p class="enlarged-text">Posters must fit into a standard <span style="color: #007BFF;">A0 (A-zero) size,
-                with a portrait
-                (vertical) orientation: 841 x 1189 mm (or 33.1 x 46.8 inches) width x length.</span> Please be
-              particularly
-              careful not to exceed the width limit (841 mm).</p>
-            <p class="enlarged-text">Posters will be affixed to the poster boards with pushpins. We will provide some
-              pushpins, but presenters
-              are encouraged to bring their own and/or to share to help everyone set up their posters quickly. We will
-              not be providing printing services, so please have your posters ready before the conference.</p>
+            <h1>Transforming Education Through the Metaverse: Unlocking Innovation Beyond Traditional Boundaries</h1>
+            <p class="enlarged-text">Moderator: Yu-Ju LAN, National Taiwan Normal University, Taiwan</p>
+            <h2 class="enlarged-text"><strong>Panelists:</strong></h2>
+            <ul>
+              <li><strong>Gwo-Dong CHEN</strong>, National Central University, Taiwan</li>
+              <li><strong>Jon-Chao HONG</strong>, National Taiwan Normal University, Taiwan</li>
+              <li><strong>Yun WEN</strong>, National Institute of Education, Nanyang Technological University, Singapore
+              </li>
+            </ul>
+            <p class="enlarged-text">As we stand at the cusp of a digital revolution, the integration of the metaverse
+              into education heralds
+              a transformative era for teaching and learning. The metaverse, a collective of immersive technologies,
+              expands the reality continuum and has the potential to reshape educational paradigms by creating
+              interactive learning environments that transcend traditional classroom boundaries. This panel explores the
+              transformative potential of the metaverse in education, highlighting its ability to unlock innovative
+              learning experiences and move beyond conventional educational limitations by simulating real-life
+              scenarios, enhancing presence, and providing hands-on learning experiences that enhance comprehension and
+              retention.</p>
+            <p class="enlarged-text">Our expert panelists will delve into the multifaceted impact of the metaverse on
+              education, examining its
+              potential to foster creativity, collaboration, and engagement among students. We will also address the
+              challenges associated with implementing the metaverse in education and propose potential solutions to
+              these issues.</p>
+            <h3><strong>Panelist 1: Gwo-Dong CHEN</strong></h3>
+            <div>
+              <img src="image/org/gwoDongChen.jpg" alt="" class="alignleft frame" width="120" height="120" />
+              <h3><strong>
+                  <div style="color:purple">Personas and Spatial Intelligence of Digital Reality for Learning
+                </strong></h3>
+            </div>
+            <div class="small separator"></div>
+            <p class="enlarged-text"></p>
+            <h3><strong>Panelist 2: Jon-Chao HONG</strong></h3>
+            <div>
+              <img src="image/org/Jon-Chao-Hong.png" alt="" class="alignleft frame" width="120" height="120" />
+              <h3><strong>
+                  <div style="color:purple">Training Escaping Skills with Immersive Virtual Reality
+                </strong></h3>
+            </div>
+            <div class="small separator"></div>
+            <p class="enlarged-text">From the perspective of brain science, when learners perform virtual actions,
+              individual mirror neurons
+              will be activated, and transfer those skills to real environment. Moreover, embodied cognition can make
+              activate prefrontal cortex of the brain, thereby improving learning effects. In line with these, immersive
+              virtual reality (IVR) can simulated virtual environment for learners to practice procedural skill and
+              declarative knowledge. For example, the "Earthquake Escaping", “Fire Escaping” and “Sense of Danger” are
+              developed with IVR, users can learn procedural knowledge and develop “Conditional Response” to cope
+              disaster. In these three IVR, the content includes (1) "Unit training": in different situations for
+              mastery learning. (2) "Situated training": string several units for learners to cope serious dangerous
+              matters. The training system includes (1) Practice module: training on-the-spot reactions and anchoring
+              correct escape knowledge to long-term memory, and scaffolding in mis-steps to reduce the damage that may
+              be caused by misconceptions. (2) Assessment module: learners are allowed to conduct situated assessments,
+              the real responses in cope disaster are recorded through the learners' embodied operations. Expectedly,
+              through the design mechanism in IVR, learners can practice repeatedly to develop disaster response skills
+              to save life from earthquake, fire disaster.</p>
+            <h3><strong>Panelist 3: Yun WEN</strong></h3>
+            <div>
+              <img src="image/org/Wen Yun (1).jpg" alt="" class="alignleft frame" width="120" height="120" />
+              <h3><strong>
+                  <div style="color:purple">Sustainable Use of AR: Cases of Integrating AR in Singapore Primary School
+                    Science Classes
+                </strong></h3>
+            </div>
+            <div class="small separator"></div>
+            <p class="enlarged-text">The use of AR in classrooms to promote collaborative learning and inquiry is not a
+              new topic. However,
+              how to sustainably and on a large scale implement AR-based learning activities in schools remains a
+              challenge. In this talk, Dr. Wen will share her ongoing project about designing, implementing, and scaling
+              up the integration of AR in Singapore primary school science classes. The sharing seeks to provide
+              insights into how to synergize teachers, researchers, and developers to promote pedagogical innovations
+              using emerging technologies like AR.</p>
 
             <div class="clear"></div><!-- clear float -->
           </div><!-- end #maincontent -->
