--- a/seminar.html
+++ b/seminar.html
@@ -88,6 +88,7 @@
 								<li><a href="keynote.html">keynote</a> </li>
 								<li><a href="presenterGuildline.html">Guidelines for presenters</a> </li>
 								<li><a href="chairGuildline.html">Guidelines for Track Chairs & Co-Chairs</a> </li>
+								<li><a href="panel1.html">Panel 1</a> </li>
 							</ul>
 						</li>
 						<!--li><a href="keynote.html">Keynote Speech</a></li-->
